--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^0.13.5
   image_picker: ^0.8.6
   font_awesome_flutter: ^10.2.1
+  firebase_messaging: ^14.0.4
+  firebase_core: ^2.1.1
 
 
 dev_dependencies:
