--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   firebase_messaging: ^14.0.4
   firebase_core: ^2.1.1
+  file_picker: ^5.2.3
 
 
 dev_dependencies:
